--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
+# To use this file, copy it to `.env` and update and/or add your own values.
+# Be sure to read the `Environment Variables` section in the README.
 # Website to capture and stream
 WEBSITE_URL=https://example.com
-
 # RTMP endpoint to stream to
 RTMP_URL=rtmp://localhost:1935/live/stream
-
-# Output resolution (720p or 1080p)
-RESOLUTION=1080p
+# Output resolution (720p, 1080p, or 2k)
+RESOLUTION=720p
+# Output framerate (30 or 60)
+FRAMERATE=30
