--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  stream-website:
+  stream-webpage:
     build: .
     environment:
       - FRAMERATE=${FRAMERATE:-60}
@@ -12,7 +12,7 @@ services:
       - TWITCH_CHANNEL=${TWITCH_CHANNEL}
       - TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
       - TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
-      - WEBSITE_URL=${WEBSITE_URL:-https://google.com}
+      - WEBPAGE_URL=${WEBPAGE_URL:-https://google.com}
     ports:
       - "${PORT:-8080}:${PORT:-8080}"
 
