--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # To use this file, copy it to `.env` and update and/or add your own values.
 # Be sure to read the `Environment Variables` section in the README.
 # Webpage to capture and stream
-WEBPAGE_URL=https://example.com
+WEBPAGE_URL="https://www.youtube.com/embed/xuCn8ux2gbs?autoplay=1&loop=1&playlist=xuCn8ux2gbs"
 # RTMP endpoint to stream to
 RTMP_URL=rtmp://localhost:1935/live/stream
 # Output resolution (720p, 1080p, or 2k)
