--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -20,3 +20,8 @@ updates:
     labels:
       - "dependencies"
       - "docker"
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    open-pull-requests-limit: 10
+    schedule:
+      interval: "daily"
