--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -19,7 +19,7 @@ jobs:
         go-version: '1.24'
 
     - name: Install dependencies
-      run: go get .
+      run: go mod download
     
     - name: Run tests
       run: |
