--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -103,6 +103,12 @@ jobs:
     
     - name: Load Docker image
       run: docker load -i /tmp/stream-webpage-${{ github.run_id }}.tar
+
+    - name: Install ffmpeg
+      run: |
+        echo "Installing FFmpeg..."
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg
     
     - name: Start stream-webpage container
       run: |
@@ -118,14 +124,21 @@ jobs:
           -e WEBPAGE_URL="https://www.youtube.com/embed/xuCn8ux2gbs?autoplay=1&loop=1&playlist=xuCn8ux2gbs" \
           stream-webpage:test-${{ github.run_id }}
     
-    - name: Setup FFmpeg
-      uses: FedericoCarboni/setup-ffmpeg@v3
-      id: setup-ffmpeg
-    
     - name: Wait for services to start
       run: |
         echo "Waiting for services to start..."
         sleep 60
+
+    - name: Test Stream Container Health Endpoint
+      run: |
+        echo "Testing stream container health endpoint..."
+        response=$(curl -s http://localhost:8080/health)
+        if [[ "$response" != *"\"status\":\"ok\""* ]]; then
+          echo "Health check failed: $response"
+          exit 1
+        else
+          echo "Health check passed"
+        fi
     
     - name: Test RTMP stream
       run: |
@@ -142,8 +155,7 @@ jobs:
         
         # Use ffprobe to check stream properties
         echo "Checking stream properties with ffprobe..."
-        echo "Using ffprobe from: ${{ steps.setup-ffmpeg.outputs.ffmpeg-path }}/ffprobe"
-        timeout 30 "${{ steps.setup-ffmpeg.outputs.ffmpeg-path }}/ffprobe" -v quiet -print_format json -show_streams rtmp://localhost:1935/live/stream > stream_info.json 2>/dev/null || {
+        timeout 30 "ffprobe" -v quiet -print_format json -show_streams rtmp://localhost:1935/live/stream > stream_info.json 2>/dev/null || {
           echo "Stream not available yet, checking container logs..."
           docker logs stream-webpage
           docker logs $(docker ps -q --filter ancestor=tiangolo/nginx-rtmp)
