--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -132,9 +132,15 @@ jobs:
     - name: Test Stream Container Health Endpoint
       run: |
         echo "Testing stream container health endpoint..."
-        response=$(curl -s http://localhost:8080/health)
-        if [[ "$response" != *"\"status\":\"ok\""* ]]; then
-          echo "Health check failed: $response"
+        response=$(curl -s -w "%{http_code}" http://localhost:8080/health)
+        http_code="${response: -3}"
+        response_body="${response%???}"
+        
+        echo "HTTP Status: $http_code"
+        echo "Response: $response_body"
+        
+        if [[ "$http_code" != "200" ]]; then
+          echo "Health check failed with HTTP status: $http_code"
           exit 1
         else
           echo "Health check passed"
