Added edge build concurrency rules

--- a/.github/workflows/edge.yaml
+++ b/.github/workflows/edge.yaml
@@ -2,6 +2,10 @@
 # This workflow builds and pushes the edge image for the Stream Webpage Container on merge to the main branch.
 name: Edge Image Build
 
+concurrency:
+  group: edge-build
+  cancel-in-progress: false
+
 on:
   push:
     branches:
