Implemented WEBPAGE_REFRESH_INTERVAL environmental variable

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # To use this file, copy it to `.env` and update and/or add your own values.
 # Be sure to read the `Environment Variables` section in the README.
+
+# Basic streaming configuration
 # Webpage to capture and stream
 WEBPAGE_URL="https://www.youtube.com/embed/xuCn8ux2gbs?autoplay=1&loop=1&playlist=xuCn8ux2gbs"
 # RTMP endpoint to stream to
@@ -8,3 +10,29 @@ RTMP_URL=rtmp://localhost:1935/live/stream
 RESOLUTION=720p
 # Output framerate (30 or 60)
 FRAMERATE=30
+
+# Optional configurations (uncomment to use)
+# Webpage refresh interval in seconds (optional - if not set, automatic refresh is disabled)
+# WEBPAGE_REFRESH_INTERVAL=120
+
+# Logging configuration
+# Log format (json or console) - default: json
+# LOG_FORMAT=json
+# Log level (debug, info, warn, warning, error, dpanic, panic, fatal) - default: info
+# LOG_LEVEL=info
+
+# HTTP server configuration
+# Port for health and metrics endpoint - default: 8080
+# PORT=8080
+
+# Stream status checking configuration
+# Cron schedule for checking stream status - default: */10 * * * * (every 10 minutes)
+# STATUS_CRON_SCHEDULE="*/10 * * * *"
+
+# Twitch integration (all three required for Twitch status checking)
+# Twitch channel name to monitor
+# TWITCH_CHANNEL=your_channel_name
+# Twitch Client ID from https://dev.twitch.tv/console
+# TWITCH_CLIENT_ID=your_client_id
+# Twitch Client Secret from https://dev.twitch.tv/console
+# TWITCH_CLIENT_SECRET=your_client_secret
